fix ghost start for macos guard